@@ -23,9 +23,13 @@ import java.util.stream.Collectors;
 
 import com.google.common.collect.Iterables;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import org.apache.cassandra.auth.Permission;
 import org.apache.cassandra.config.CFMetaData;
 import org.apache.cassandra.config.ColumnDefinition;
+import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.config.Schema;
 import org.apache.cassandra.config.ViewDefinition;
 import org.apache.cassandra.cql3.*;
@@ -49,6 +53,8 @@ import org.apache.cassandra.transport.Event;
 
 public class CreateViewStatement extends SchemaAlteringStatement
 {
+    private static final Logger logger = LoggerFactory.getLogger(CreateViewStatement.class);
+
     private final CFName baseName;
     private final List<RawSelector> selectClause;
     private final WhereClause whereClause;
@@ -114,6 +120,11 @@ public class CreateViewStatement extends SchemaAlteringStatement
 
     public Event.SchemaChange announceMigration(QueryState queryState, boolean isLocalOnly) throws RequestValidationException
     {
+        if (!DatabaseDescriptor.enableMaterializedViews())
+        {
+            throw new InvalidRequestException("Materialized views are disabled. Enable in cassandra.yaml to use.");
+        }
+
         // We need to make sure that:
         //  - primary key includes all columns in base table's primary key
         //  - make sure that the select statement does not have anything other than columns
@@ -303,8 +314,13 @@ public class CreateViewStatement extends SchemaAlteringStatement
                                                        whereClauseText,
                                                        viewCfm);
 
+        logger.warn("Creating materialized view {} for {}.{}. " +
+                    "Materialized views are experimental and are not recommended for production use.",
+                    definition.viewName, cfm.ksName, cfm.cfName);
+
         try
         {
+            ClientWarn.instance.warn("Materialized views are experimental and are not recommended for production use.");
             MigrationManager.announceNewView(definition, isLocalOnly);
             return new Event.SchemaChange(Event.SchemaChange.Change.CREATED, Event.SchemaChange.Target.TABLE, keyspace(), columnFamily());
         }
